prevent flicker on data load for Angular

--- a/web/src/main.css
+++ b/web/src/main.css
@@ -5,6 +5,13 @@ body {
     position: relative;
 }
 
+
+/* NG-CLOAK: prevents Angular flicker on data load */
+[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
+    display: none !important;
+}
+
+
 /* NAVBAR */
 ul {
     list-style-type: none;
